Use SortedSet<E> instead of Set<E>